003 add actions and connect view to actions

--- a/003_flux-tall/package.json
+++ b/003_flux-tall/package.json
@@ -6,6 +6,8 @@
     "gulp-browserify": "*",
     "gulp-concat": "*",
     "react": "*",
-    "reactify": "*"
+    "reactify": "*",
+    "flux": "*",
+    "object-assign": "*"
   }
 }
